--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,8 @@
 
     <dimen name="fab_margin_bottom">16dp</dimen>
     <dimen name="fab_margin_end">16dp</dimen>
+
+    <dimen name="edit_text_margin_start_end">16dp</dimen>
+    <dimen name="edit_text_margin_bottom">72dp</dimen>
+    <dimen name="edit_text_margin_top">16dp</dimen>
 </resources>
