fix: Refactoring Layout scripts

--- a/app/src/main/res/layout/activity_script_edit.xml
+++ b/app/src/main/res/layout/activity_script_edit.xml
@@ -1,8 +1,7 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_forecast"
+    android:id="@+id/fragment_script_edit"
     android:name="com.gziolle.promptastic.ui.ScriptEditFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gziolle.promptastic.ui.ScriptEditFragment"
-    tools:layout="@android:layout/list_content" />
+    tools:context="com.gziolle.promptastic.ui.ScriptEditFragment" />
