--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_forecast"
+    android:id="@+id/fragment_script_list"
     android:name="com.gziolle.promptastic.ui.ScriptListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
