--- a/app/src/main/res/layout/fragment_script_list.xml
+++ b/app/src/main/res/layout/fragment_script_list.xml
@@ -9,7 +9,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/script_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:clickable="true"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_script_fab"
