--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,9 @@
     <dimen name="edit_text_margin_start_end">16dp</dimen>
     <dimen name="edit_text_margin_bottom">72dp</dimen>
     <dimen name="edit_text_margin_top">16dp</dimen>
+
+    <dimen name="detail_title_text_size">20sp</dimen>
+    <dimen name="detail_content_text_size">14sp</dimen>
+    <dimen name="detail_title_margin_top">16dp</dimen>
+    <dimen name="detail_content_margin_top">16dp</dimen>
 </resources>
