--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,8 @@
     <dimen name="detail_content_text_size">14sp</dimen>
     <dimen name="detail_title_margin_top">16dp</dimen>
     <dimen name="detail_content_margin_top">16dp</dimen>
+
+    <dimen name="navigation_view_width">240dp</dimen>
+    <dimen name="navigation_view_header_height">150dp</dimen>
+
 </resources>
