--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="list_item_title_color">#000000</color>
     <color name="list_item_content_color">#555555</color>
+
+    <color name="fab_icon_white">#FFFFFF</color>
 </resources>
