--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,6 @@
     <dimen name="navigation_view_width">240dp</dimen>
     <dimen name="navigation_view_header_height">150dp</dimen>
 
+    <dimen name="play_script_countdown_text_size">48sp</dimen>
+
 </resources>
