--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:id="@+id/et_login_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="username"
+        android:hint="@string/edit_text_login_user_name"
         android:layout_marginTop="32dp"
         android:inputType="textAutoComplete"
         app:layout_constraintTop_toBottomOf="@id/iv_login_logo"
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="password"
+        android:hint="@string/edit_text_login_password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +43,7 @@
         android:id="@+id/bt_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LOGIN"
+        android:text="@string/login_button_text"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/et_login_password"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +63,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Are you new here? "/>
+            android:text="@string/login_new_user"
+            android:layout_marginEnd="12dp"/>
 
         <TextView
             android:id="@+id/tv_signup"
@@ -71,7 +72,8 @@
             android:layout_height="wrap_content"
             android:focusable="true"
             android:clickable="true"
-            android:text="Sign Up"/>
+            android:autoLink="all"
+            android:text="@string/login_sign_up"/>
     </LinearLayout>
 
 
