--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,50 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:background="@drawable/login_gradient_background"
+    android:padding="@dimen/activity_default_margin"
     tools:context=".ui.LoginActivity">
 
-    <ImageView
-        android:id="@+id/iv_signup_logo"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    <LinearLayout
+        android:id="@+id/ll_signup_congrats"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_add_white" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Good!!!"
+            android:textSize="32sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="To sign up, follow the instructions below"
+            android:textSize="16sp" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/et_signup_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/signup_email_hint"
-        android:layout_marginTop="32dp"
         android:inputType="textAutoComplete"
-        app:layout_constraintTop_toBottomOf="@id/iv_signup_logo"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_signup_congrats"
         app:layout_constraintVertical_chainStyle="spread" />
 
     <EditText
         android:id="@+id/et_signup_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/login_edit_text_top_margin"
         android:hint="@string/signup_password_hint"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_signup_user" />
+        app:layout_constraintTop_toBottomOf="@id/et_signup_user"
+        app:layout_constraintVertical_chainStyle="spread" />
 
     <Button
         android:id="@+id/bt_signup"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/login_button_top_margin"
+        android:background="@drawable/button_background"
         android:text="@string/signup_button_text"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/et_signup_password"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/button_text_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_chainStyle="spread"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_signup_password"
+        app:layout_constraintVertical_chainStyle="spread" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
