--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,10 +12,11 @@
         android:id="@+id/iv_login_logo"
         android:layout_width="@dimen/login_icon_width"
         android:layout_height="@dimen/login_icon_height"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_promptastic_logo" />
+        android:src="@drawable/promptastic_name" />
 
     <EditText
         android:id="@+id/et_login_user"
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/edit_text_login_user_name"
         android:inputType="textAutoComplete"
+        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@id/iv_login_logo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,5 +79,15 @@
             android:autoLink="all"
             android:text="@string/login_sign_up"/>
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/login_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ll_signup"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
