--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -69,4 +69,14 @@
         app:layout_constraintTop_toBottomOf="@id/et_signup_password"
         app:layout_constraintVertical_chainStyle="spread" />
 
+    <ProgressBar
+        android:id="@+id/signup_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bt_signup"
+        android:visibility="gone"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
