fix: Fixed dimension misleads

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,6 @@
     <dimen name="login_button_top_margin">24dp</dimen>
     <dimen name="login_sign_up_end_margin">12dp</dimen>
 
+    <dimen name="toolbar_elevation">4dp</dimen>
+
 </resources>
