--- a/app/src/main/res/layout/fragment_script_list.xml
+++ b/app/src/main/res/layout/fragment_script_list.xml
@@ -30,10 +30,10 @@
         android:id="@+id/add_script_fab"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="@dimen/fab_margin_bottom"
+        android:layout_marginEnd="@dimen/fab_margin_end"
         android:layout_gravity="bottom|end"
         app:fabSize="normal"
-        android:src = "@drawable/ic_add_white"/>
+        android:src="@drawable/ic_add_white"/>
 
 </FrameLayout>
