--- a/app/src/main/res/layout/activity_play_script.xml
+++ b/app/src/main/res/layout/activity_play_script.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,5 +24,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="@dimen/play_script_countdown_text_size"/>
+
+    <be.rijckaert.tim.animatedvector.FloatingMusicActionButton
+        android:id="@+id/fab_pause_script"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="@dimen/fab_margin_bottom"
+        android:layout_marginEnd="@dimen/fab_margin_end"
+        android:visibility="invisible"
+        app:fab_size="normal"
+        app:mode="pauseToPlay"/>
 
 </FrameLayout>
