--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -10,7 +10,7 @@
             android:defaultValue="light"
             android:entries="@array/pref_background_entries"
             android:entryValues="@array/pref_background_entry_values"
-            android:key="example_list"
+            android:key="play_theme"
             android:negativeButtonText="@null"
             android:positiveButtonText="@null"
             android:title="@string/pref_title_background" />
@@ -25,10 +25,10 @@
             android:title="@string/pref_title_text_speed" />
 
         <ListPreference
-            android:defaultValue="black"
-            android:entries="@array/text_color_list_preference_entries"
-            android:entryValues="@array/text_color_list_preference_entry_values"
-            android:key="text_color"
+            android:defaultValue="normal"
+            android:entries="@array/text_size_list_preference_entries"
+            android:entryValues="@array/text_size_list_preference_entry_values"
+            android:key="text_size"
             android:negativeButtonText="@null"
             android:positiveButtonText="@null"
             android:title="@string/pref_title_text_color" />
