--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_chainStyle="spread"
+        app:layout_constraintBottom_toTopOf="@id/et_login_user"
         android:src="@drawable/promptastic_name" />
 
     <EditText
@@ -25,7 +27,10 @@
         android:hint="@string/edit_text_login_user_name"
         android:inputType="textAutoComplete"
         android:layout_marginTop="32dp"
+        android:layout_marginStart="@dimen/login_margin_start"
+        android:layout_marginEnd="@dimen/login_margin_end"
         app:layout_constraintTop_toBottomOf="@id/iv_login_logo"
+        app:layout_constraintBottom_toTopOf="@id/et_login_password"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_chainStyle="spread" />
@@ -35,21 +40,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/login_edit_text_top_margin"
+        android:layout_marginStart="@dimen/login_margin_start"
+        android:layout_marginEnd="@dimen/login_margin_end"
         android:hint="@string/edit_text_login_password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_login_user" />
+        app:layout_constraintVertical_chainStyle="spread"
+        app:layout_constraintTop_toBottomOf="@id/et_login_user"
+        app:layout_constraintBottom_toTopOf="@id/bt_login"/>
 
     <Button
         android:id="@+id/bt_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login_button_text"
+        android:layout_marginStart="@dimen/login_margin_start"
+        android:layout_marginEnd="@dimen/login_margin_end"
         android:layout_marginTop="@dimen/login_button_top_margin"
         android:background="@drawable/button_background"
         android:textColor="@color/button_text_color"
         app:layout_constraintTop_toBottomOf="@id/et_login_password"
+        app:layout_constraintBottom_toTopOf="@id/ll_signup"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_chainStyle="spread"/>
@@ -59,10 +71,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/login_sign_up_top_margin"
+        app:layout_constraintBottom_toTopOf="@id/login_progress_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bt_login"
-        app:layout_constraintVertical_chainStyle="spread" >
+        app:layout_constraintTop_toBottomOf="@id/bt_login">
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,7 +88,7 @@
             android:layout_height="wrap_content"
             android:focusable="true"
             android:clickable="true"
-            android:autoLink="all"
+            android:autoLink="web"
             android:text="@string/login_sign_up"/>
     </LinearLayout>
 
@@ -88,6 +100,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll_signup"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="invisible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
